--- a/src/app/shops/shops.component.html
+++ b/src/app/shops/shops.component.html
@@ -1,3 +1,16 @@
-<p>
-  shops works!
-</p>
+<div class="container" >
+  <h1 style="text-align: center">
+    SHOP PAGE
+  </h1>
+  <div class="row">
+    <div class="col-md-4" *ngFor="let data of shopData; let i =index">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src={{data.image}} width="250" height="250">
+        <div class="card-body" style="text-align: center">
+          <h5 class="card-title" style = "text-align: center">{{data.title}}</h5>
+          <a href={{i}} class="btn btn-primary">Add to Cart</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
