--- a/src/app/shops-details/shops-details.component.html
+++ b/src/app/shops-details/shops-details.component.html
@@ -1,4 +1,4 @@
-<div class="container" >
+<!-- <div class="container" >
   <h1 style="text-align: center">
     SHOP Details
   </h1>
@@ -13,4 +13,39 @@
       </div>
     </div>
   </div>
+</div> -->
+<h2 style="text-align: center; margin-top: 20px">
+  SHOP DETAILS
+</h2>
+<div class="container containerStyle">
+
+  <div class="row">
+    <div class="col-md-4">
+      <img src="{{ShopIndex.image}}" width="400" height="400">
+    </div>
+    <div class="col-md-1"></div>
+    <div class="col-md-6 title">
+      <h5>
+        {{ShopIndex.title}}
+      </h5>
+      <h6>
+        {{ShopIndex.price}}
+      </h6>
+      <h6>
+        <p>
+          {{ShopIndex.Description}}
+        </p>
+      </h6>
+      <p class="footer">
+        SKU: {{ShopIndex.SKU}}
+      </p>
+      <p>
+          Category: {{ShopIndex.category}}
+      </p>
+      <p>
+          Tags: {{ShopIndex.Tag}}
+      </p>
+    </div>
+  </div>
+
 </div>
