--- a/src/app/admin/admin.component.css
+++ b/src/app/admin/admin.component.css
@@ -1,4 +1,4 @@
-.formContainer {
+/* .formContainer {
     border: 1px solid grey;
     margin-top: 50px;
     width: 680px;
@@ -12,4 +12,30 @@
 a{
     margin-left: 550px;
     padding-top: 10px;
+} */
+
+body, html {
+    height: 100%;
+    margin: 0;
+}
+
+.hero-image {
+    width: 100vw;
+    height: 100vh;
+    
+    /* Flexbox stuff */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    /* Text styles */
+    text-align: center;
+    color: black;
+    
+    /* Background styles */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('../../assets/images/123.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
