--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <form class="form-horizontal formContainer">
       <h2 style="text-align: center">Admin Login Page</h2>
     <div class="form-group formPosition">
@@ -28,4 +28,37 @@
       </div>
     </div>
   </form>
+</div> -->
+
+<div class="hero-image">
+  <div class="container" style="margin-left: 150px">
+    <div class="row">
+      <div class="col-md-10">
+        <div class="card" style="background-color: transparent">
+          <div class="container">
+            <form class="form-horizontal formContainer">
+              <h2>Admin Login Page</h2>
+              <div class="form-group ">
+                <label class="control-label col-sm-2" for="email" style="margin-right: 300px">Email:</label>
+                <div class="col-sm-6" style="margin-left: 250px">
+                  <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required [(ngModel)]="email">
+                </div>
+              </div>
+              <div class="form-group ">
+                <label class="control-label col-sm-2" for="pwd" style="margin-right: 280px">Password:</label>
+                <div class="col-sm-6" style="margin-left: 250px">
+                  <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd" required [(ngModel)]="password">
+                </div>
+              </div>
+              <div class="form-group ">
+                <div class="col-sm-offset-2 col-sm-6" style="margin-left: 250px">
+                  <button type="submit" class="btn btn-primary btn-block" (click)="login()">Submit</button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
