--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -31,7 +31,7 @@
 </div> -->
 
 <div class="hero-image">
-  <div class="container" style="margin-left: 150px">
+  <div class="container" style="margin-left: 150px;">
     <div class="row">
       <div class="col-md-10">
         <div class="card" style="background-color: transparent">
