--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -5,7 +5,7 @@
         <div class="card" style="box-shadow: 0px 5px 20px #000000">
           <div class="container">
             <form class="form-horizontal formContainer" style="margin-top: 50px">
-              <h2>Login</h2>
+              <h2 style = "text-align: center">Login</h2>
               <div class="form-group " style="margin-top: 30px">
                 <div class="col-sm-10" style="margin-left: 20px">
                   <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required [(ngModel)]="email">
