--- a/src/app/common/common.component.html
+++ b/src/app/common/common.component.html
@@ -1,31 +1,30 @@
-<div class="container">
-  <form class="form-horizontal formContainer">
-      <h2 style="text-align: center">Common Login Page</h2>
-    <div class="form-group formPosition">
-      <label class="control-label col-sm-2" for="email">Email:</label>
-      <div class="col-sm-6">
-        <input type="email"  class="form-control" id="email" placeholder="Enter email" name="email" required
-        [(ngModel)]="email">
-      </div>
-    </div>
-    <div class="form-group formPosition">
-      <label class="control-label col-sm-2" for="pwd">Password:</label>
-      <div class="col-sm-6">          
-        <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd"  required
-        [(ngModel)] = "password">
-      </div>
-    </div>
-    <div class="form-group formPosition">        
-      <div class="col-sm-offset-2 col-sm-10">
-        <div class="checkbox">
-          <label><input type="checkbox" name="remember"> Remember me</label>
+<div class="hero-image">
+  <div class="container" style="margin-left: 450px">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card" style="box-shadow: 0px 5px 20px #000000">
+          <div class="container">
+            <form class="form-horizontal formContainer" style="margin-top: 50px">
+              <h2 style = "text-align: center">Login</h2>
+              <div class="form-group " style="margin-top: 30px">
+                <div class="col-sm-10" style="margin-left: 20px">
+                  <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required [(ngModel)]="email">
+                </div>
+              </div>
+              <div class="form-group" style="margin-top: 30px">
+                <div class="col-sm-10" style="margin-left: 20px">
+                  <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd" required [(ngModel)]="password">
+                </div>
+              </div>
+              <div class="form-group " style="margin-bottom: 60px">
+                <div class="col-sm-offset-2 col-sm-8" style="margin-left: 60px; margin-top: 40px">
+                  <button type="submit" class="btn btn-warning btn-block" (click)="login()">Login</button>
+                </div>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </div>
-    <div class="form-group formPosition">        
-      <div class="col-sm-offset-2 col-sm-6">
-        <button type="submit" class="btn btn-primary btn-block" (click) = "login()">Submit</button>
-      </div>
-    </div>
-  </form>
+  </div>
 </div>
