--- a/src/app/shops/shops.component.css
+++ b/src/app/shops/shops.component.css
@@ -1,3 +1,26 @@
 .center-block {
     float:none;
-  }
+}
+
+.container {
+  position: relative;
+}
+
+.text-block {
+  position: absolute;
+  bottom: 5px;
+  right: 20px;
+  background-color: transparent;
+  color: white;
+  /* padding-left: 20px; */
+  float: left;
+  padding-right: 30px;
+}
+
+button{
+  margin-left: 8px;
+}
+
+div {
+  cursor: pointer;
+}
