--- a/src/app/shops/shops.component.html
+++ b/src/app/shops/shops.component.html
@@ -1,15 +1,43 @@
-<div class="container" >
+<div class="container">
   <h1 style="text-align: center">
     SHOP PAGE
   </h1>
   <div class="row">
     <div class="col-md-4" *ngFor="let data of shopData; let i =index">
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src={{data.image}} width="250" height="250">
-        <div class="card-body" style="text-align: center">
-          <h5 class="card-title" style = "text-align: center">{{data.title}}</h5>
-          <a class="btn btn-primary" (click)="addtocart(i)">Add to Cart</a>
+      <div class="card" style="width: 18rem;" (click)="addtocart(i)">
+        <div class="container">
+          <img class="card-img-top" src={{data.image}} width="250" height="250">
+
+          <button type="button" class="btn btn-default btn-sm">
+              <i class="fa fa-search"></i>
+          </button>
+          <button type="button" class="btn btn-default btn-sm">
+              <i class = "fa fa-times"></i>
+          </button>
+          <button type="button" class="btn btn-default btn-sm">
+              <i class="fa fa-heart-o"></i>
+          </button>
+          <button type="button" class="btn btn-default btn-sm">
+              <i class="fa fa-shopping-cart"></i> ADD TO CART
+          </button>
         </div>
+        <div class="card-body" style="text-align: center; ">
+          <p style="color: grey">
+            {{data.title}}
+          </p>
+          <p>
+            {{data.Tag}}
+          </p>
+          <p>
+            <b>
+              {{data.price}}
+            </b>
+          </p>
+        </div>
+        <!-- <div class="card-body" style="text-align: center">
+          <h5 class="card-title" style="text-align: center">{{data.title}}</h5>
+          <a class="btn btn-primary" (click)="addtocart(i)">Add to Cart</a>
+        </div> -->
       </div>
     </div>
   </div>
