--- a/src/app/shops/shops.component.html
+++ b/src/app/shops/shops.component.html
@@ -5,21 +5,22 @@
   <div class="row">
     <div class="col-md-4" *ngFor="let data of shopData; let i =index">
       <div class="card" style="width: 18rem;" (click)="addtocart(i)">
-        <div class="container">
+        <div class="containers">
           <img class="card-img-top" src={{data.image}} width="250" height="250">
-
-          <button type="button" class="btn btn-default btn-sm">
+          <div class="containerButtons">
+            <button type="button" class="btn btn-default btn-sm">
               <i class="fa fa-search"></i>
-          </button>
-          <button type="button" class="btn btn-default btn-sm">
-              <i class = "fa fa-times"></i>
-          </button>
-          <button type="button" class="btn btn-default btn-sm">
+            </button>
+            <button type="button" class="btn btn-default btn-sm">
+              <i class="fa fa-times"></i>
+            </button>
+            <button type="button" class="btn btn-default btn-sm">
               <i class="fa fa-heart-o"></i>
-          </button>
-          <button type="button" class="btn btn-default btn-sm">
+            </button>
+            <button type="button" class="btn btn-default btn-sm">
               <i class="fa fa-shopping-cart"></i> ADD TO CART
-          </button>
+            </button>
+          </div>
         </div>
         <div class="card-body" style="text-align: center; ">
           <p style="color: grey">
