--- a/src/app/shops/shops.component.html
+++ b/src/app/shops/shops.component.html
@@ -1,3 +1,21 @@
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" >UP STORE</a>
+      <span style="margin-left: 510px">
+          <a class="navbar-brand" >Home</a>
+          <a class="navbar-brand" >Pages</a>
+          <a class="navbar-brand" >Blogs</a>
+          <a class="navbar-brand" >Portfolio</a>
+          <a class="navbar-brand" >Shop</a>
+          <a class="navbar-brand" >ShortCode</a>
+          <a class="navbar-brand" >Contact Us</a>
+      </span>
+    </div>
+  </div>
+</nav> 
+
+
 <div class="container">
   <h1 style="text-align: center">
     SHOP PAGE
