--- a/src/app/shops-details/shops-details.component.html
+++ b/src/app/shops-details/shops-details.component.html
@@ -14,9 +14,17 @@
     </div>
   </div>
 </div> -->
-<h2 style="text-align: center; margin-top: 20px">
+
+<nav class="navbar navbar-default navbar-sticky-top" >
+  <div class="container">
+    <a class="navbar-brand" style="font-family: Poppins; font-weight: 25">UP<span style="color:aqua; font-size: 25px">.</span>STORE</a>
+    <a class="navbar-brand" style="font-family: Poppins; font-weight: 25; margin-right: 510px">SHOP DETAILS</a>
+  </div>
+</nav>
+
+<!-- <h2 style="text-align: center; margin-top: 20px">
   SHOP DETAILS
-</h2>
+</h2> -->
 <div class="container containerStyle">
 
   <div class="row">
@@ -103,6 +111,7 @@
         </span>
       </b>
     </div>
+
     <!-- <div class="col-md-3">
       <img src="{{ShopIndex.image}}" width="300" height="400">
     </div>
