--- a/src/app/shops-details/shops-details.component.css
+++ b/src/app/shops-details/shops-details.component.css
@@ -1,5 +1,5 @@
 .containerStyle{
-    margin-top: 15%;
+    margin-top: 5%;
 }
 
 .title{
@@ -25,6 +25,7 @@ button {
 
 button:hover{
     background-color: #27af7d;
+    border: 1px solid #27af7d;
 }
 
 input[type=number] {
@@ -65,9 +66,11 @@ a:hover{
     color: #27af7d;
 }
 
-i{
-    color: grey;
-}
+i {
+    color: gray;  
+    font-weight: 2;
+    font-size: 14px;
+  }
 
 .containers{
     position: relative;
@@ -92,3 +95,6 @@ i{
     color: white;
 }
 
+button:hover > i{
+    color: white;
+}
