--- a/src/app/shops-details/shops-details.component.html
+++ b/src/app/shops-details/shops-details.component.html
@@ -29,8 +29,8 @@
 
   <div class="row">
     <div class="col-md-2">
-      <img src="{{ShopIndex.image}}" width="100" height="100">
-      <img src="{{ShopIndex.image}}" width="100" height="100">
+      <img src="{{ShopIndex.image}}" width="100" height="100"><br/>
+      <img src="{{ShopIndex.image}}" width="100" height="100"><br/>
       <img src="{{ShopIndex.image}}" width="100" height="100">
     </div>
     <div class="col-md-6">
@@ -82,13 +82,13 @@
       </h5>
       <input type="number" min="1" value="1">
       <span >
-        <button type="submit" class="btn btn-dark btn-lg ">
-          <i class="fa fa-shopping-cart"></i> ADD TO CART
+        <button type="submit" class="btn btn-dark btn-lg " style="font-family: Poppins; font-size: 15px;">
+          <i class="fa fa-shopping-cart" style="color: white;"></i> ADD TO CART
         </button>
-        <button type="button" class="btn btn-default btn-lg">
+        <button type="button" class="btn btn-default btn-lg" style="padding-top: 4px; padding-left: 10px; padding-right: 10px;">
           <i class="fa fa-heart-o"></i>
         </button>
-        <button type="button" class="btn btn-default btn-lg">
+        <button type="button" class="btn btn-default btn-lg" style="padding-top: 4px; padding-left: 10px; padding-right: 10px;">
           <i class="fa fa-retweet"></i>
         </button>
       </span>
