--- a/src/app/shops/shops.component.html
+++ b/src/app/shops/shops.component.html
@@ -15,6 +15,7 @@
   </div>
 </nav>  -->
 
+<app-header></app-header>
 <nav class="navbar navbar-default navbar-sticky-top" >
   <div class="container">
     <a class="navbar-brand" style="font-family: Poppins; font-weight: 25">UP<span style="color:aqua; font-size: 25px">.</span>STORE</a>
