--- a/src/app/shops-details/shops-details.component.html
+++ b/src/app/shops-details/shops-details.component.html
@@ -29,8 +29,8 @@
 
   <div class="row">
     <div class="col-md-2">
-      <img src="{{ShopIndex.image}}" width="100" height="100"><br/>
-      <img src="{{ShopIndex.image}}" width="100" height="100"><br/>
+      <img src="{{ShopIndex.image}}" width="100" height="100"><br/><br/>
+      <img src="{{ShopIndex.image}}" width="100" height="100"><br/><br/>
       <img src="{{ShopIndex.image}}" width="100" height="100">
     </div>
     <div class="col-md-6">
@@ -44,72 +44,68 @@
         SKU: 
         <span style="color: #555555">
             {{ShopIndex.SKU}}
-        </span>
-      </p>
-      <p>
+        </span><br/>
         Availability: 
         <span style="color: #555555">
             In Stock
-        </span>
-      </p>
-      <p>
+        </span><br/>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
         <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
+        <span class="fa fa-star-o unchecked"></span>
         <span >
           &nbsp;
-          <a href="#" style="color: #555555">
+          <a href="#" >
             4 Reviews
           </a>
           &nbsp;
-          <a href="#" style="color: #555555">
+          <a href="#" >
             Email to a friend
           </a>
         </span>
       </p>
-      <b>
-        {{ShopIndex.price}}
-      </b><br/>
+      
+    
+      <b style="font-size: 20px">{{ShopIndex.price}}</b>
+      <br/><br/>
       <p>
         <span style="color: #555555">
           {{ShopIndex.Description}}
         </span>     
       </p>
-      <h5>
+      <b>
         Quantity
-      </h5>
-      <input type="number" min="1" value="1">
+      </b><br/>
+      <input type="number" step="1" min="1" value="1" style="padding-left: 15px; margin-top: 3px;">
       <span >
         <button type="submit" class="btn btn-dark btn-lg " style="font-family: Poppins; font-size: 15px;">
           <i class="fa fa-shopping-cart" style="color: white;"></i> ADD TO CART
         </button>
-        <button type="button" class="btn btn-default btn-lg" style="padding-top: 4px; padding-left: 10px; padding-right: 10px;">
+        <button type="button" class="btn btn-default btn-lg" style="padding-top: 2px; padding-left: 12px; padding-right: 10px; margin-left: 10px">
           <i class="fa fa-heart-o"></i>
         </button>
-        <button type="button" class="btn btn-default btn-lg" style="padding-top: 4px; padding-left: 10px; padding-right: 10px;">
+        <button type="button" class="btn btn-default btn-lg" style="padding-top: 2px; padding-left: 12px; padding-right: 10px; margin-left: 10px">
           <i class="fa fa-retweet"></i>
         </button>
       </span>
       
       <p class="footer">
-        Category: {{ShopIndex.category}}
+        <b>Category:</b> <span class="tag"> {{ShopIndex.category}}</span><br/>
+        <b>Tags:</b> <span class="tag"> {{ShopIndex.Tag}}</span><br/>
+        <b>
+          Share: 
+          <span>
+              <i class="fa fa-facebook"></i>&nbsp;
+              <i class="fa fa-twitter"></i>&nbsp;
+              <i class="fa fa-pinterest"></i>&nbsp;
+              <i class="fa fa-google-plus"></i>&nbsp;
+              <i class="fa fa-linkedin"></i>&nbsp;
+              <i class="fa fa-reddit"></i>
+          </span>
+        </b>
       </p>
-      <p>
-        Tags: {{ShopIndex.Tag}}
-      </p>
-      <b>
-        Share: 
-        <span>
-            <i class="fa fa-facebook"></i>&nbsp;
-            <i class="fa fa-twitter"></i>&nbsp;
-            <i class="fa fa-pinterest"></i>&nbsp;
-            <i class="fa fa-google-plus"></i>&nbsp;
-            <i class="fa fa-linkedin"></i>&nbsp;
-            <i class="fa fa-reddit"></i>
-        </span>
-      </b>
+      
     </div>
 
     <!-- <div class="col-md-3">
@@ -155,22 +151,22 @@
     <div class="card">
       <div class="card-header" id="headingOne">
         <h5 class="mb-0">
-          <button class="btn btn-default accordion-btn" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          <button class="btn btn-default accordion-btn "  data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
             Description
           </button>
           <button class="btn btn-default collapsed accordion-btn" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
             Additional Information
           </button>
-          <button class="btn btn-default collapsed accordion-btn" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseTwo">
+          <button class="btn btn-default collapsed accordion-btn" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
             REVIEWS (1)
           </button>
-          <button class="btn btn-default collapsed accordion-btn" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseTwo">
+          <button class="btn btn-default collapsed accordion-btn" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
             Custom TAB
           </button>
         </h5>
       </div>
   
-      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+      <div id="collapseOne" class="collapse show " aria-labelledby="headingOne" data-parent="#accordion">
         <div class="card-body">
           Description
         </div>
@@ -193,3 +189,5 @@
     </div>
   </div>
 </div>
+
+
