--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -22,3 +22,11 @@ i:hover{
     color: #27af7d;
 }
 
+.navs {
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.navs:hover {
+    color: #27af7d; 
+}
