--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -607,53 +607,83 @@
 
 
 <div class="page-header" style="background-color: #252525; height: 48px">
-    <div class="container">
-        <div class="row">
-          <div class="col-md-3" style="border-right: 1px solid rgba(85,85,85,1); padding-bottom: -1px;">
-              <p>Welcome you to <span>UpStore</span> Theme</p>
-          </div>
-          <div class="col-md-4">
-            <p>
-              Follow:
-              <span>
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-twitter"></i>
-                <i class="fa fa-google-plus"></i>
-                <i class="fa fa-instagram"></i>
-                <i class="fa fa-linkedin"></i>
-              </span>
-            </p>
-          </div>
-          <div class="col-md-5">
-            <p>
-              <span style="color: #a9a9a9; text-decoration: none; border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; ">
-                <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px">
-                    English
-                </span>
-                <span class="caret">
-                </span>
-              </span>
-              <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px ;  border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; margin-right: 10px;">
-                <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px">
-                    USD
-                </span>
-                <span class="caret">
-                </span>
-              </span>
-              <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px;  border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; margin-right: 10px;">
-                <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px">
-                    Wishlist (0)
-                </span>
-                <span class="caret">
-                </span>
-              </span>
-              <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px; margin-left: 5px;">
-                Login / Sign up
-                <span class="caret">
-                </span>
-              </span>
-            </p>
-          </div>
-        </div> 
-    </div>   
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3" style="border-right: 1px solid rgba(85,85,85,1); padding-bottom: -1px;">
+        <p>Welcome you to
+          <span>UpStore</span> Theme</p>
+      </div>
+      <div class="col-md-4">
+        <p>
+          Follow:
+          <span>
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-google-plus"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-linkedin"></i>
+          </span>
+        </p>
+      </div>
+      <div class="col-md-5">
+        <p>
+          <span style="color: #a9a9a9; text-decoration: none; border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; ">
+            <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px">
+              English
+            </span>
+            <span class="caret">
+            </span>
+          </span>
+          <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px ;  border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; margin-right: 10px;">
+            <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px">
+              USD
+            </span>
+            <span class="caret">
+            </span>
+          </span>
+          <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px;  border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; margin-right: 10px;">
+            <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px">
+              Wishlist (0)
+            </span>
+            <span class="caret">
+            </span>
+          </span>
+          <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px; margin-left: 5px;">
+            Login / Sign up
+            <span class="caret">
+            </span>
+          </span>
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
+
+<nav class="navbar navbar-default navbar-sticky-top">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand " style="font-family: Poppins; font-weight: 25">
+        UP
+        <span style="color:aqua; font-size: 25px">.</span>STORE</a>
+      <a class="navbar-brand " style="font-family: Poppins; font-weight: 25; margin-right: 510px"></a>
+      <a class="navbar-brand navs">
+        Home
+      </a>
+      <a class="navbar-brand navs">
+        Pages
+      </a>
+      <a class="navbar-brand navs">
+        Blogs
+      </a>
+      <a class="navbar-brand navs">
+        Portfolio
+      </a>
+      <a class="navbar-brand navs">
+        Shop
+      </a>
+      <a class="navbar-brand navs">
+        Shortcode
+      </a>
+    </div>
+  </div>
+</nav>
