--- a/src/app/shops-details/shops-details.component.html
+++ b/src/app/shops-details/shops-details.component.html
@@ -15,12 +15,13 @@
   </div>
 </div> -->
 
-<nav class="navbar navbar-default navbar-sticky-top" >
+<app-header></app-header>
+<!-- <nav class="navbar navbar-default navbar-sticky-top" >
   <div class="container">
     <a class="navbar-brand" style="font-family: Poppins; font-weight: 25">UP<span style="color:aqua; font-size: 25px">.</span>STORE</a>
     <a class="navbar-brand" style="font-family: Poppins; font-weight: 25; margin-right: 510px">SHOP DETAILS</a>
   </div>
-</nav>
+</nav> -->
 
 <!-- <h2 style="text-align: center; margin-top: 20px">
   SHOP DETAILS
