--- a/src/app/shops/shops.component.html
+++ b/src/app/shops/shops.component.html
@@ -70,21 +70,21 @@
                 <button type="button" class="btn btn-default btn-sm">
                   <i class="fa fa-heart-o"></i>
                 </button>
-                <button type="button" class="btn btn-default btn-sm" style="font-family: Poppins; ">
+                <button type="button" class="btn btn-default btn-sm" style="font-family: ubuntu, sans-serif; ">
                   <i class="fa fa-shopping-cart"> ADD TO CART</i>
                 </button>
               </div>
             </div>
           </div>
           <div class="card-body" style="text-align: center; ">
-            <p style="color: grey">
+            <p style="color: grey; font-family: ubuntu, sans-serif;">
               {{data.title}}
             </p>
-            <p>
+            <p style="font-family: ubuntu, sans-serif;">
               {{data.Tag}}
             </p>
             <p>
-              <b>
+              <b style="font-family: ubuntu, sans-serif;">
                 {{data.price}}
               </b>
             </p>
