--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -41,10 +41,8 @@
             <span class="caret">
             </span>
           </span>
-          <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px; margin-left: 5px; font-family: ubuntu, sans-serif">
-            Login / Sign up
-            <span class="caret">
-            </span>
+          <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px; margin-left: 5px; font-family: ubuntu, sans-serif" (click)="logout()">
+            Logout
           </span>
         </p>
       </div>
